# SmithedSummit26

./: .gitignore  README.md  beet.yml  booth_definition.json  flake.nix  pyproject.toml
assets/assets/nbs/items/globe/: sandstone.json  stone.json
assets/assets/nbs/lang/: en_us.json
assets/assets/nbs/models/block/globe/: sandstone.json  stone.json
assets/assets/nbs/models/block/logos/studio/: icon.json  text.json  (+1 more)
assets/assets/nbs/models/block/notes/: base.json
assets/assets/nbs/models/block/props/: guitar.json  open_sign.json  piano.json
assets/assets/nbs/models/block/thumbnails/: base.json
assets/assets/nbs/models/item/: balloon_nbs.json  balloon_note_base.json  flat_note_block.json  gramophone.json  gramophone_base.json  guitar.json  headphones.json  monitor.json  nbw_block.json  nbw_text.json  note_base.json  open_sign.json  piano.json  record_player.json  records_double.json  records_triple.json  scroll_panel.json  speakers.json  wall_art.json
assets/assets/nbs/models/item/globe/: sandstone.json  stone.json
assets/assets/nbs/models/item/notes/: base.json
assets/assets/nbs/models/item/props/: guitar.json  headphones.json  open_sign.json  piano.json  speaker.json  speakers.json
assets/assets/nbs/models/item/thumbnails/: base.json
songs/: download_songs.py  songs.csv
src/: interaction.bolt  interaction.py  model.py
src/data/nbs/lang/: en_us.json
src/data/nbs/painting_variant/: builderaltwcf1.json  kaliumi.json  playfulpotato.json  reycast.json  stunningwheel94.json  superbaconbro.json
src/data/painting_variant/: builderalt.json
(+19 files in other folders)
