[tool.poetry]
name = "nbs-smithed-summit-26"
version = "0.1.0"
description = "Note Block Studio data pack + resource pack for Smithed Summit 2026"
authors = ["Bentroen <bemcdc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
beet = "^0.115.0"
pynbs = "^1.1.0"
bolt = "^0.50.1"

[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.0"
tuna = "^0.5.11"

[[tool.poetry.packages]]
include = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
